--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
     # Steps reperesent a sequence of tasks that will be excuted as part of the job
     steps: 
      # Check out your repository under $GITHUB_WORKSPACE, so your job will access it
-     - uses: action/checkout@v3
+     - uses: actions/checkout@v3
      
      # Runs a single command using the runners shell
      - name: Run a one line scrip
